Login & registration UI tweaks

--- a/anabeesh/src/main/res/layout/activity_registration.xml
+++ b/anabeesh/src/main/res/layout/activity_registration.xml
@@ -3,139 +3,141 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
+    tools:context="com.rxmuhammadyoussef.anabeesh.ui.registration.RegistrationActivity">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:descendantFocusability="beforeDescendants"
-            android:focusableInTouchMode="true"
-            tools:context="com.intcore.sayes_android.ui.registration.RegistrationActivity">
+    <ImageView
+        android:id="@+id/iv_logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/marginTopLoginImageView"
+        android:layout_marginTop="@dimen/marginTopLoginImageView"
+        android:src="@mipmap/ic_launcher"
+        app:layout_constraintBottom_toTopOf="@id/tv_login"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0"
+        app:layout_constraintVertical_chainStyle="packed" />
 
-            <TextView
-                android:id="@+id/btn_login"
-                style="@style/RegisterSemiCircleButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/heightRegistrationButton"
-                android:layout_marginBottom="@dimen/marginBottomRegistrationButton"
-                android:elevation="@dimen/elevationRegistrationEditText"
-                android:text="@string/login"
-                app:layout_constraintBottom_toTopOf="@id/tv_new_account"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/tv_login"
+        style="@style/LoginTextViewTitleStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/marginLoginTextView"
+        android:layout_marginTop="@dimen/marginLoginTextView"
+        android:clickable="true"
+        android:focusable="true"
+        android:text="@string/login"
+        android:textColor="@color/colorTextSecondaryLight"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/et_first_name"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toRightOf="@id/btn_new_account"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_logo" />
 
-            <TextView
-                android:id="@+id/tv_new_account"
-                style="@style/RegisterTextViewTitleInverseStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/marginRegistrationTextView"
-                android:text="@string/new_account"
-                app:layout_constraintBottom_toTopOf="@+id/iv_avatar"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/btn_login" />
+    <TextView
+        android:id="@+id/btn_new_account"
+        style="@style/LoginTextViewTitleStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin"
+        android:layout_marginBottom="@dimen/marginTopLoginImageView"
+        android:layout_marginTop="@dimen/marginLoginTextView"
+        android:text="@string/new_account"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@id/tv_login"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/tv_login"
+        app:layout_constraintTop_toTopOf="@id/tv_login" />
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/iv_avatar"
-                android:layout_width="96dp"
-                android:layout_height="96dp"
-                android:elevation="@dimen/elevationRegistrationEditText"
-                android:src="@drawable/user_icon"
-                app:civ_border_color="@android:color/white"
-                app:civ_border_width="2dp"
-                app:layout_constraintBottom_toTopOf="@id/ll_fields"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_new_account" />
+    <com.rxmuhammadyoussef.core.widget.rxedittext.name.NameEditText
+        android:id="@+id/et_first_name"
+        style="@style/RegisterEditTextStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="@dimen/marginStartRegistrationEditText"
+        android:layout_marginTop="@dimen/marginLoginTextView"
+        android:drawableStart="@drawable/log_in_user_icon"
+        android:hint="@string/first_name"
+        android:scrollbars="horizontal"
+        android:singleLine="true"
+        app:layout_constraintBottom_toTopOf="@id/et_email"
+        app:layout_constraintLeft_toRightOf="@id/et_last_name"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_login"
+        app:layout_constraintVertical_chainStyle="spread_inside" />
 
-            <LinearLayout
-                android:id="@+id/ll_fields"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin"
-                android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_avatar">
+    <com.rxmuhammadyoussef.core.widget.rxedittext.name.NameEditText
+        android:id="@+id/et_last_name"
+        style="@style/RegisterEditTextStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/marginBottomRegistrationEditText"
+        android:layout_marginEnd="@dimen/marginEndRegistrationEditText"
+        android:layout_marginStart="@dimen/marginStartRegistrationEditText"
+        android:layout_marginTop="@dimen/marginTopRegistrationEditText"
+        android:drawableStart="@drawable/log_in_user_icon"
+        android:hint="@string/last_name"
+        android:scrollbars="horizontal"
+        android:singleLine="true"
+        app:layout_constraintBottom_toBottomOf="@id/et_first_name"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/et_first_name"
+        app:layout_constraintTop_toTopOf="@id/et_first_name" />
 
-                <com.rxmuhammadyoussef.core.widget.rxedittext.name.NameEditText
-                    android:id="@+id/et_first_name"
-                    style="@style/RegisterEditTextStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/marginEndRegistrationEditText"
-                    android:layout_marginStart="@dimen/marginStartRegistrationEditText"
-                    android:layout_marginTop="@dimen/marginTopRegistrationEditText"
-                    android:drawableStart="@drawable/log_in_user_icon"
-                    android:hint="@string/first_name" />
+    <com.rxmuhammadyoussef.core.widget.rxedittext.email.EmailEditText
+        android:id="@+id/et_email"
+        style="@style/RegisterEditTextStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/marginEndRegistrationEditText"
+        android:layout_marginStart="@dimen/marginStartRegistrationEditText"
+        android:layout_marginTop="@dimen/marginTopRegistrationEditText"
+        android:drawableStart="@drawable/log_in_mail_icon"
+        android:hint="@string/email"
+        android:inputType="textEmailAddress"
+        app:layout_constraintBottom_toTopOf="@id/et_password"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_first_name" />
 
-                <com.rxmuhammadyoussef.core.widget.rxedittext.name.NameEditText
-                    android:id="@+id/et_last_name"
-                    style="@style/RegisterEditTextStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/marginEndRegistrationEditText"
-                    android:layout_marginStart="@dimen/marginStartRegistrationEditText"
-                    android:layout_marginTop="@dimen/marginTopRegistrationEditText"
-                    android:drawableStart="@drawable/log_in_user_icon"
-                    android:hint="@string/last_name" />
+    <com.rxmuhammadyoussef.core.widget.rxedittext.password.PasswordEditText
+        android:id="@+id/et_password"
+        style="@style/RegisterEditTextStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/marginBottomRegistrationEditText"
+        android:layout_marginEnd="@dimen/marginEndRegistrationEditText"
+        android:layout_marginStart="@dimen/marginStartRegistrationEditText"
+        android:layout_marginTop="@dimen/marginTopRegistrationEditText"
+        android:drawableStart="@drawable/sign_up_password_icon"
+        android:hint="@string/password"
+        android:inputType="textPassword"
+        app:layout_constraintBottom_toTopOf="@id/btn_register"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_email" />
 
-                <com.rxmuhammadyoussef.core.widget.rxedittext.email.EmailEditText
-                    android:id="@+id/et_email"
-                    style="@style/RegisterEditTextStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/marginEndRegistrationEditText"
-                    android:layout_marginStart="@dimen/marginStartRegistrationEditText"
-                    android:layout_marginTop="@dimen/marginTopRegistrationEditText"
-                    android:drawableStart="@drawable/log_in_mail_icon"
-                    android:hint="@string/email"
-                    android:inputType="textEmailAddress" />
-
-                <com.rxmuhammadyoussef.core.widget.rxedittext.password.PasswordEditText
-                    android:id="@+id/et_password"
-                    style="@style/RegisterEditTextStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/marginEndRegistrationEditText"
-                    android:layout_marginStart="@dimen/marginStartRegistrationEditText"
-                    android:layout_marginTop="@dimen/marginTopRegistrationEditText"
-                    android:drawableStart="@drawable/sign_up_password_icon"
-                    android:hint="@string/password"
-                    android:inputType="textPassword" />
-
-                <com.rxmuhammadyoussef.core.widget.rxedittext.password.PasswordEditText
-                    android:id="@+id/et_confirm_password"
-                    style="@style/RegisterEditTextStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/marginEndRegistrationEditText"
-                    android:layout_marginStart="@dimen/marginStartRegistrationEditText"
-                    android:layout_marginTop="@dimen/marginTopRegistrationEditText"
-                    android:drawableStart="@drawable/sign_up_password_icon"
-                    android:hint="@string/confirm_password"
-                    android:inputType="textPassword" />
-
-                <Button
-                    android:id="@+id/btn_register"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/marginBottomLoginButton"
-                    android:layout_marginEnd="@dimen/marginEndRegistrationEditText"
-                    android:layout_marginStart="@dimen/marginStartRegistrationEditText"
-                    android:layout_marginTop="@dimen/marginTopRegistrationEditText"
-                    android:elevation="@dimen/elevationRegistrationEditText"
-                    android:text="@string/register" />
-            </LinearLayout>
-        </android.support.constraint.ConstraintLayout>
-    </ScrollView>
+    <Button
+        android:id="@+id/btn_register"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/marginBottomLoginButton"
+        android:layout_marginEnd="@dimen/marginEndRegistrationEditText"
+        android:layout_marginStart="@dimen/marginStartRegistrationEditText"
+        android:layout_marginTop="@dimen/marginTopRegistrationEditText"
+        android:enabled="false"
+        android:text="@string/register"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_password" />
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/container_snackbar"
