--- a/anabeesh/src/main/res/drawable/shape_login_semi_circle.xml
+++ b/anabeesh/src/main/res/drawable/shape_login_semi_circle.xml
@@ -6,7 +6,7 @@
     android:viewportWidth="24.0">
 
     <path
-        android:fillColor="#757bc9"
+        android:fillColor="@color/colorPrimary"
         android:pathData="M24 24v-24h-24v24a20 20 0 0 1 24 0z"
         tools:ignore="VectorRaster" />
 
