--- a/anabeesh/src/main/res/layout/activity_login.xml
+++ b/anabeesh/src/main/res/layout/activity_login.xml
@@ -16,22 +16,42 @@
         app:layout_constraintBottom_toTopOf="@id/tv_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
         android:id="@+id/tv_login"
         style="@style/LoginTextViewTitleStyle"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/marginLoginTextView"
         android:layout_marginTop="@dimen/marginLoginTextView"
-        android:layout_marginBottom="@dimen/marginTopLoginImageView"
         android:text="@string/login"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/et_email"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toRightOf="@id/btn_new_account"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iv_logo" />
+
+    <TextView
+        android:id="@+id/btn_new_account"
+        style="@style/LoginTextViewTitleStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin"
+        android:layout_marginBottom="@dimen/marginTopLoginImageView"
+        android:layout_marginTop="@dimen/marginLoginTextView"
+        android:clickable="true"
+        android:focusable="true"
+        android:text="@string/new_account"
+        android:textColor="@color/colorTextSecondaryLight"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@id/tv_login"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/tv_login"
+        app:layout_constraintTop_toTopOf="@id/tv_login" />
 
     <com.rxmuhammadyoussef.core.widget.rxedittext.email.EmailEditText
         android:id="@+id/et_email"
@@ -41,7 +61,7 @@
         android:layout_marginBottom="@dimen/marginBottomLoginEditText"
         android:layout_marginEnd="@dimen/marginEndLoginEditText"
         android:layout_marginStart="@dimen/marginStartLoginEditText"
-        android:layout_marginTop="@dimen/marginTopLoginEditText"
+        android:layout_marginTop="@dimen/marginLoginTextView"
         android:drawableStart="@drawable/log_in_mail_icon"
         android:hint="@string/email"
         android:inputType="phone"
@@ -88,37 +108,10 @@
         android:layout_height="wrap_content"
         android:padding="@dimen/padding"
         android:text="@string/forget_password"
-        app:layout_constraintBottom_toTopOf="@+id/rl_container"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btn_login" />
-
-    <FrameLayout
-        android:id="@+id/rl_container"
-        android:layout_width="0dp"
-        android:layout_height="120dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <View
-            style="@style/LoginSemiCircleButtonStyle"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:rotation="180" />
-
-        <Button
-            android:id="@+id/btn_new_account"
-            android:layout_width="match_parent"
-            android:elevation="@dimen/elevationLoginEditText"
-            android:layout_height="match_parent"
-            android:background="@android:color/transparent"
-            android:gravity="center"
-            android:text="@string/new_account"
-            android:textColor="@color/colorLoginButtonText"
-            android:textSize="@dimen/textSizeLoginButton"
-            android:textStyle="bold" />
-    </FrameLayout>
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/container_snackbar"
@@ -128,6 +121,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-
 </android.support.constraint.ConstraintLayout>
