--- a/core/src/main/res/layout/layout_announcement_toast.xml
+++ b/core/src/main/res/layout/layout_announcement_toast.xml
@@ -8,10 +8,13 @@
         android:id="@+id/tv_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/shape_success_toast"
+        android:background="@drawable/shape_hint_toast"
         android:drawablePadding="8dp"
         android:drawableStart="@drawable/ic_announcement"
-        android:padding="16dp"
+        android:paddingBottom="8dp"
+        android:paddingEnd="16dp"
+        android:paddingStart="16dp"
+        android:paddingTop="8dp"
         android:textColor="#e8f4fd"
         tools:text="Completed successfully" />
 </FrameLayout>
