--- a/core/src/main/res/layout/layout_error_toast.xml
+++ b/core/src/main/res/layout/layout_error_toast.xml
@@ -11,7 +11,10 @@
         android:background="@drawable/shape_error_toast"
         android:drawablePadding="8dp"
         android:drawableStart="@drawable/ic_error"
-        android:padding="16dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
         android:textColor="#fbd7d2"
         tools:text="Warning" />
 </FrameLayout>
