--- a/anabeesh/src/main/res/layout/item_article.xml
+++ b/anabeesh/src/main/res/layout/item_article.xml
@@ -3,14 +3,30 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="280dp"
+    android:layout_width="320dp"
     android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/margin"
     android:layout_marginStart="@dimen/margin_micro"
     android:background="@drawable/card"
     android:elevation="@dimen/elevationCard"
-    android:minHeight="160dp"
-    android:padding="@dimen/padding">
+    android:minHeight="160dp">
+
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:id="@+id/iv_cover"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        app:layout_constraintBottom_toTopOf="@id/tv_header"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:riv_corner_radius_top_left="3dp"
+        app:riv_corner_radius_top_right="3dp"
+        app:riv_mutate_background="true"
+        app:riv_oval="false"
+        tools:scaleType="centerCrop"
+        tools:src="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/tv_header"
@@ -18,13 +34,16 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_nano"
+        android:layout_marginEnd="@dimen/margin"
+        android:layout_marginStart="@dimen/margin"
+        android:layout_marginTop="@dimen/margin_micro"
         android:gravity="right"
         android:singleLine="true"
         app:layout_constraintBottom_toTopOf="@id/tv_body"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_cover"
         app:layout_constraintVertical_chainStyle="spread_inside"
         tools:text="Article title goes here" />
 
@@ -36,7 +55,7 @@
         android:layout_marginBottom="@dimen/margin"
         android:ellipsize="end"
         android:gravity="right"
-        android:maxLines="4"
+        android:maxLines="3"
         app:layout_constraintBottom_toTopOf="@id/iv_user"
         app:layout_constraintEnd_toEndOf="@id/tv_header"
         app:layout_constraintStart_toStartOf="@id/tv_header"
@@ -45,9 +64,11 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/iv_user"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginBottom="@dimen/margin"
         android:layout_marginEnd="@dimen/margin"
+        android:layout_marginStart="@dimen/margin"
         android:layout_marginTop="@dimen/margin_nano"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/tv_user_name"
@@ -60,6 +81,7 @@
         style="@style/HostTextViewSubTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/margin"
         android:gravity="right"
         android:singleLine="true"
         app:layout_constraintBottom_toBottomOf="@id/iv_user"
