--- a/anabeesh/src/main/res/layout/item_category.xml
+++ b/anabeesh/src/main/res/layout/item_category.xml
@@ -8,22 +8,34 @@
     android:layout_marginBottom="@dimen/margin_nano"
     android:layout_marginTop="@dimen/margin_nano">
 
+    <ImageView
+        android:id="@+id/iv_category"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:padding="@dimen/padding_micro"
+        android:layout_marginRight="@dimen/margin_micro"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/tv_title"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@mipmap/ic_launcher" />
+
     <TextView
         android:id="@+id/tv_title"
         style="@style/CategoryTextViewTitleStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_micro"
-        android:layout_marginEnd="@dimen/margin"
-        android:layout_marginStart="@dimen/margin"
+        android:layout_marginLeft="@dimen/margin"
+        android:layout_marginRight="@dimen/margin_micro"
         android:layout_marginTop="@dimen/margin_micro"
         android:gravity="right"
         android:singleLine="true"
-        app:layout_constraintBottom_toBottomOf="@id/btn_follow"
+        app:layout_constraintBottom_toBottomOf="@id/iv_category"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintLeft_toRightOf="@id/btn_follow"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/btn_follow"
+        app:layout_constraintRight_toLeftOf="@id/iv_category"
+        app:layout_constraintTop_toTopOf="@id/iv_category"
         app:layout_constraintVertical_chainStyle="packed"
         tools:text="Title goes here" />
 
@@ -33,16 +45,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_micro"
-        android:layout_marginEnd="@dimen/margin"
-        android:layout_marginStart="@dimen/margin"
+        android:layout_marginLeft="@dimen/margin"
         android:layout_marginTop="@dimen/margin_micro"
         android:paddingBottom="@dimen/padding_nano"
         android:paddingEnd="@dimen/padding_ultra"
         android:paddingStart="@dimen/padding_ultra"
         android:paddingTop="@dimen/padding_nano"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/iv_category"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/tv_title"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/iv_category"
         tools:text="Follow" />
 </android.support.constraint.ConstraintLayout>
