--- a/anabeesh/src/main/res/values/styles.xml
+++ b/anabeesh/src/main/res/values/styles.xml
@@ -207,12 +207,14 @@
         <item name="android:textColor">@color/colorHomeTextViewLight</item>
         <item name="android:textSize">@dimen/textSizeHomeText</item>
         <item name="android:gravity">start</item>
+        <item name="android:lineSpacingExtra">@dimen/margin_nano</item>
     </style>
 
     <style name="HomeTextViewSubTextStyle" parent="android:style/Widget.TextView">
         <item name="android:textColor">@color/colorHomeTextViewSubText</item>
         <item name="android:textSize">@dimen/textSizeHomeSubText</item>
         <item name="android:gravity">start</item>
+        <item name="android:lineSpacingExtra">@dimen/margin_nano</item>
         <item name="android:paddingStart">@dimen/padding_extra</item>
         <item name="android:paddingEnd">@dimen/padding_extra</item>
         <item name="android:paddingTop">0dp</item>
